--- a/package.json
+++ b/package.json
@@ -14,10 +14,8 @@
     "ai": "^4.1.46",
     "lucide-react": "^0.476.0",
     "next": "15.1.7",
-    "openai": "^4.85.4",
     "react": "^19.0.0",
-    "react-dom": "^19.0.0",
-    "zod": "^3.24.2"
+    "react-dom": "^19.0.0"
   },
   "devDependencies": {
     "@eslint/eslintrc": "^3",
